--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="line_timetable_button_redirect">Line Timetable</string>
     <string name="options_button_redirect">Options</string>
     <string name="bus_stop_button_redirect">Bus Stops</string>
+    <string name="map_button_redirect">Map</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
