removed CD, doing table operator now with minimal functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Velocity</string>
+    <string name="confirm_BusStop">Confirm</string>
+    <string name="inputBusStop_BusStop">Input BusStop</string>
 </resources>
