[#171220582] Feature: bus stop activity (#4)
* CD not working basic UI

* removed CD, doing table operator now with minimal functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Velocity</string>
+    <string name="confirm_BusStop">Confirm</string>
+    <string name="inputBusStop_BusStop">Input BusStop</string>
     <string name="plnT_from">From</string>
     <string name="plnT_to">To</string>
 </resources>
