Minor improvements made to the layout of the main menu.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">Velocity</string>
+    <string name="confirm_BusStop">Journey Planner</string>
+    <string name="inputBusStop_BusStop">Input BusStop</string>
+    <string name="plnT_from">From</string>
+    <string name="plnT_to">To</string>
     <string name="journey_planner_button_redirect">Journey Planner</string>
     <string name="line_timetable_button_redirect">Line Timetable</string>
     <string name="options_button_redirect">Options</string>
@@ -7,4 +11,9 @@
     <string name="map_button_redirect">Map</string>
     <string name="title_activity_maps">Map</string>
     <string name="google_maps_key">Google Maps</string>
+    <string name="imgJourneyPlanner">image assigned to the journey planner</string>
+    <string name="imgVelocity">image of the velocity logo</string>
+    <string name="imgLineTimetable">image assigned with the line timetable</string>
+    <string name="imgBusStops">image assigned with the bus stops</string>
+    <string name="imgOptions">image assigned with options</string>
 </resources>
