--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="map_button_redirect">Map</string>
     <string name="title_activity_maps">Map</string>
     <string name="google_maps_key">Google Maps</string>
+    <string-array name="naptan_BusStop">
+    </string-array>
+
 </resources>
