--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,13 @@
     <string name="map_button_redirect">Map</string>
     <string name="title_activity_maps">Map</string>
     <string name="google_maps_key">Google Maps</string>
-    <string-array name="naptan_BusStop">
-    </string-array>
+    <string name="map">Map</string>
+    <string name="journey_planner">Journey Planner</string>
+    <string name="home">Home</string>
+    <string name="stop_timetable">Stop Timetable</string>
+    <string-array name="naptan_BusStop"></string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
