Implements the journey planner activity (#14)
* Journey planner skeleton:
- Ability to switch directions of a bus ride.
- List of possible connections (for now named bus stops).

* Remove unnecessary string allocation and make explicit generic into diamond operator.

* Rename activity away from main.

* Validation, automatic selection

* Changed layout and added API connection.

* Fix lonlat format.

* Fix new Location import.

* Revert changes to main activity.

* Optimizations, use string resource, fix longlat format.

Co-authored-by: Samuel-Bates <55737338+Samuel-Bates@users.noreply.github.com>
Co-authored-by: Aidan <sir.meepington.1@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,5 @@
     <string name="google_maps_key">Google Maps</string>
     <string-array name="naptan_BusStop">
     </string-array>
-
+    <string name="swap_switch">Switch</string>
 </resources>
