Implement NavigationUI activity. (#15)
* Bottom nav bar. Main fragment.

* converted maps activity and options activity to fragments and added these to nav_graph

* Add Journey Planner to the nav bar Fragments. (#13)

* added Journey Planner to the nav bar Fragments.
made Journey planner into a fragment

* Fix unused resource id.

Co-authored-by: Aidan <sir.meepington.1@gmail.com>

* Begin switching between fragments on menu button.

* Implement switching fragments from bottom UI.

* Use FragmentTransaction to navigate through fragments.

* Link navigation menu buttons

* Remove useless methods

* Remove onClick from xml. Remove unused code in fragments.

* Optimize imports

* Move fragment logic into behaviour classes.

* Add side navigation and toolbar (#16)

* Add toolbar to the top of the screen. 
* Add DrawerLayout for side navigation.

Co-authored-by: Aidan Crooks <sir.meepington.1@gmail.com>

* Optimise imports

Co-authored-by: Jason William REDSHAW <v8196566@live.tees.ac.uk>
Co-authored-by: Jordmore <55835147+Jordmore@users.noreply.github.com>
Co-authored-by: Samuel-Bates <55737338+Samuel-Bates@users.noreply.github.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,15 @@
     <string name="map_button_redirect">Map</string>
     <string name="title_activity_maps">Map</string>
     <string name="google_maps_key">Google Maps</string>
-    <string-array name="naptan_BusStop">
-    </string-array>
     <string name="swap_switch">Switch</string>
+    <string name="map">Map</string>
+    <string name="journey_planner">Journey Planner</string>
+    <string name="home">Home</string>
+    <string name="stop_timetable">Stop Timetable</string>
+    <string-array name="naptan_BusStop" />
+    <string name="imgJourneyPlanner">image assigned to the journey planner</string>
+    <string name="imgVelocity">image of the velocity logo</string>
+    <string name="imgLineTimetable">image assigned with the line timetable</string>
+    <string name="imgBusStops">image assigned with the bus stops</string>
+    <string name="imgOptions">image assigned with options</string>
 </resources>
