--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,13 +10,12 @@
     <string name="bus_stop_button_redirect">Bus Stops</string>
     <string name="map_button_redirect">Map</string>
     <string name="title_activity_maps">Map</string>
-    <string name="google_maps_key">Google Maps</string>
+    <string name="google_maps_key">AIzaSyAzA6PDhO0TBPsOqCYMnHX0Yn8FJqDkkNA</string>
     <string name="swap_switch">Switch</string>
     <string name="map">Map</string>
     <string name="journey_planner">Journey Planner</string>
     <string name="home">Home</string>
     <string name="stop_timetable">Stop Timetable</string>
-    <string-array name="naptan_BusStop" />
     <string name="imgJourneyPlanner">image assigned to the journey planner</string>
     <string name="imgVelocity">image of the velocity logo</string>
     <string name="imgLineTimetable">image assigned with the line timetable</string>
