--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="imgOptions">image assigned with options</string>
 
     <string name="qr_code">QR Code</string>
+    <string name="qr_camera">Select "Camera" from the sidebar to scan a QR code</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
