--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Velocity</string>
     <string name="confirm_BusStop">Confirm</string>
-    <string name="inputBusStop_BusStop">Input BusStop</string>
+    <string name="busStopInputHint">Bus Stop Name</string>
     <string name="plnT_from">From</string>
     <string name="plnT_to">To</string>
     <string name="journey_planner_button_redirect">Journey Planner</string>
